<?xml version="1.0" encoding="utf-8"?>

<!--
File Name: activity_account_settings.xml
Author: Kenneth Cook
Description: Layout for the AccountSettings Activity
-->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <TextView
            android:id="@+id/acct_settings_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:text="@string/acct_settings_title"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

        <TextView
            android:id="@+id/first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/acct_settings_title"
            android:layout_marginTop="20dp"
            android:text="@string/first_name"/>

        <TextView
            android:id="@+id/last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/first_name"
            android:layout_marginTop="20dp"
            android:text="@string/last_name"/>

        <TextView
            android:id="@+id/birth_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/last_name"
            android:layout_marginTop="20dp"
            android:text="@string/birth_date"/>

        <!-- TODO: Spinners for day, month, year -->

        <TextView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/birth_date"
            android:layout_marginTop="20dp"
            android:text="@string/gender"/>

        <!-- TODO: gender spinner -->

        <Button
            android:id="@+id/submit_acct_settings_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/gender"
            android:layout_marginTop="20dp"
            android:text="@string/submit_acct_settings_button"
            />

        <Button
            android:id="@+id/cancel_acct_settings_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@+id/submit_acct_settings_button"
            android:layout_below="@id/gender"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:text="@string/cancel_acct_settings_button"
            />

    </RelativeLayout>

</ScrollView>